--- a/app/MemberModule/templates/Mail/forgotPassword.latte
+++ b/app/MemberModule/templates/Mail/forgotPassword.latte
@@ -7,7 +7,7 @@ Ze stránek VZS MS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
 Nové přístupové údaje do členské části:
 
 Přihlašovací jméno: {$member->login}
-Heslo: {$member->pass}
+Heslo: {$password}
 
 Tvůj profil najdeš na adrese: {link //Member:profile}
 Zde si můžeš změnit heslo a upravit své osobní údaje.
