--- a/app/PhotoModule/templates/Sign.in.latte
+++ b/app/PhotoModule/templates/Sign.in.latte
@@ -7,9 +7,9 @@
 </style>
 
 {if $backlink}
-<p>Pro přístup do zabezpešené části fotografie se musíte přihlásit!</p>
+<p>Pro přístup do zabezpečené části fotografie se musíte přihlásit!</p>
 {else}
-<p>Po přihlášení můžete do galerie nahrávat nové fotky, uprovat alba a také prohlížet alba i fotografie, které jsou neviditelné pro veřejnost.</p>
+<p>Po přihlášení můžete do galerie nahrávat nové fotky, upravovat alba a také prohlížet alba i fotografie, které jsou neviditelné pro veřejnost.</p>
 {/if}
 
 {control signInForm}
