--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -35,7 +35,7 @@
   <b>{$user->identity->login}</b></a> (id: {$user->getId()}) | </span>
   <a n:href="Sign:out">odhlásit</a></div>
     <table>
-    <tr><td><img src="{$basePath}/img/vzs_ils_logo.png" alt="VZS ILS logo" height="102" width="198"></td>
+    <tr><td><img src="{$basePath}/img/vzs_jbc_logo.png" alt="VZS JBC logo" height="100" width="200"></td>
     <td>{include #title}</td></tr>
     </table>
 </div>
