--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -39,7 +39,7 @@
   </ul>
 
   <div id="header">
-    <a n:href="News:" title="Vzs Jablonec Fotogalerie"><img src="{$baseUri}/img/vzs_ils_logo.png" alt="logo" width="169" height="80"></a>
+    <a n:href="News:" title="Vzs Jablonec Fotogalerie"><img src="{$baseUri}/img/vzs_jbc_logo.png" alt="Logo" width="168" height="80"></a>
     <h1><span></span>VZS Jablonec Fotogalerie</h1>
   </div>
 </div>
