--- a/app/MemberModule/templates/Feed.@layout.latte
+++ b/app/MemberModule/templates/Feed.@layout.latte
@@ -2,7 +2,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:atom="http://www.w3.org/2005/Atom">
 <channel>
-<atom:link href="{$link}" rel="self" type="application/rss+xml" />
+<atom:link n:href="//this" rel="self" type="application/rss+xml" />
 <language>cs</language>
 {block #content}
 {/block}
