--- a/www/subdom/member/css/main.css
+++ b/www/subdom/member/css/main.css
@@ -18,7 +18,7 @@ border-radius: 0px 0px 15px 15px; float: right; color: #12397e; font-weight: bol
 #menu li a {display: block; text-decoration: none; color: inherit;}
 #menu li {background-color: #60afe4; text-decoration: none; border: 1px solid black; 
 font-size: 1.5em;  font-family: Arial, sans-serif; margin-top: 10%; border-radius: 1ex; 
-width: 100%; display: block; color: white; font-weight: bold; text-decoration: none; padding: 0.1ex 0.1ex 0.1ex 1ex;
+width: 100%; display: block; color: white; font-weight: bold; text-decoration: none; padding: 0.1ex 0.1ex 0.1ex 0.5ex;
 	background-image: -moz-linear-gradient(#60afe4,#0089d2); 
 	background-image: -webkit-linear-gradient(#60afe4,#0089d2); 
 	background-image: linear-gradient(#60afe4,#0089d2); 
@@ -33,7 +33,7 @@ width: 100%; display: block; color: white; font-weight: bold; text-decoration: n
 #menu a:hover, #menu ul a:active, #menu a:focus {color: #e83431;}
 #menu li.current a {color: black;}
 
-#text {margin-left: 0px; padding-top: 0px; float: none; margin-left: 12em; min-width: 15em;}
+#text {padding-top: 0px; float: none; margin-left: 13.5em; min-width: 15em;}
 
 .myfont {font-family: myfont;}
 
@@ -71,8 +71,8 @@ div#texyPreview.texy {border: none; padding: 0px;}
 .buttonMenu {padding: 0px; text-align: right;}
 .buttonMenu li {float: right; display: inline; list-style-type: none; margin-left: 1ex; margin-bottom: 1ex;}
 
-#top h1 {font-size: 1.9em; color: #d90424; margin-top: 1ex; margin-left: 0.5ex; }
-h2 {font-size: 1.3em; margin-top: 0px;}
+#top h1 {font-size: 1.9em; color: #d90424; margin-top: 1em; margin-left: 1ex;}
+h2 {font-size: 1.3em; margin-top: 1ex;}
 h3 {font-size: 1em;}
 
 dl dt {font-weight: bold;}
