--- a/www/subdom/member/css/mobile.css
+++ b/www/subdom/member/css/mobile.css
@@ -4,4 +4,5 @@
   #text {margin-left: 0px;}
   #text h1 {top: 0px; left: 1ex;}
   #top img {display: none;}
+  #top h1 {margin-top: 1ex;}
   #top #visible {display: none;}
