--- a/www/subdom/member/css/myfont.css
+++ b/www/subdom/member/css/myfont.css
@@ -1,10 +1,11 @@
 @font-face {
   font-family: 'myfont';
-  src: url('../font/myfont.eot?35714355');
-  src: url('../font/myfont.eot?35714355#iefix') format('embedded-opentype'),
-       url('../font/myfont.svg?35714355#myfont') format('svg'),
-       url('../font/myfont.woff?35714355') format('woff'),
-       url('../font/myfont.ttf?35714355') format('truetype');
+  src: url('../font/myfont.eot?8368321');
+  src: url('../font/myfont.eot?8368321#iefix') format('embedded-opentype'),
+       url('../font/myfont.woff2?8368321') format('woff2'),
+       url('../font/myfont.woff?8368321') format('woff'),
+       url('../font/myfont.ttf?8368321') format('truetype'),
+       url('../font/myfont.svg?8368321#myfont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,12 +15,12 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'myfont';
-    src: url('../font/myfont.svg?35714355#myfont') format('svg');
+    src: url('../font/myfont.svg?8368321#myfont') format('svg');
   }
 }
 */
  
-[class^="icon-"]:before, [class*=" icon-"]:before {
+ [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "myfont";
   font-style: normal;
   font-weight: normal;
@@ -35,7 +36,7 @@
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-     
+ 
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
  
@@ -46,27 +47,84 @@
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
  
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-plus:before { content: '\e800'; } /* '' */
-.icon-pencil:before { content: '\e80a'; } /* '' */
-.icon-ok:before { content: '\e801'; } /* '' */
-.icon-ok-circled:before { content: '\e802'; } /* '' */
-.icon-cancel:before { content: '\e80e'; } /* '' */
-.icon-cancel-circled:before { content: '\e808'; } /* '' */
-.icon-trash:before { content: '\e80d'; } /* '' */
-.icon-rss:before { content: '\e80c'; } /* '' */
-.icon-table:before { content: '\e817'; } /* '' */
-.icon-sort:before { content: '\e819'; } /* '' */
-.icon-mail:before { content: '\e804'; } /* '' */
-.icon-quote-left:before { content: '\e809'; } /* '' */
-.icon-lock-open:before { content: '\e807'; } /* '' */
-.icon-user:before { content: '\e816'; } /* '' */
-.icon-users:before { content: '\e81a'; } /* '' */
-.icon-calendar:before { content: '\e813'; } /* '' */
-.icon-upload:before { content: '\e803'; } /* '' */
-.icon-search:before { content: '\e810'; } /* '' */
+.icon-star:before { content: '\e800'; } /* '' */
+.icon-star-empty:before { content: '\e801'; } /* '' */
+.icon-mail:before { content: '\e802'; } /* '' */
+.icon-search:before { content: '\e803'; } /* '' */
+.icon-download:before { content: '\e804'; } /* '' */
+.icon-upload:before { content: '\e805'; } /* '' */
 .icon-lock:before { content: '\e806'; } /* '' */
-.icon-block:before { content: '\e80f'; } /* '' */
+.icon-eye:before { content: '\e807'; } /* '' */
+.icon-eye-off:before { content: '\e808'; } /* '' */
+.icon-tag:before { content: '\e809'; } /* '' */
+.icon-ok-circled:before { content: '\e80a'; } /* '' */
+.icon-ok:before { content: '\e80c'; } /* '' */
+.icon-cancel:before { content: '\e80d'; } /* '' */
+.icon-cancel-circled:before { content: '\e80e'; } /* '' */
+.icon-calendar:before { content: '\e810'; } /* '' */
+.icon-link:before { content: '\e811'; } /* '' */
+.icon-attach:before { content: '\e812'; } /* '' */
+.icon-user:before { content: '\e813'; } /* '' */
+.icon-users:before { content: '\e814'; } /* '' */
+.icon-picture:before { content: '\e817'; } /* '' */
+.icon-minus-circled:before { content: '\e818'; } /* '' */
+.icon-pencil:before { content: '\e819'; } /* '' */
+.icon-location:before { content: '\e81a'; } /* '' */
+.icon-trash-empty:before { content: '\e81b'; } /* '' */
+.icon-comment:before { content: '\e81c'; } /* '' */
+.icon-chat:before { content: '\e81d'; } /* '' */
+.icon-block:before { content: '\e81e'; } /* '' */
+.icon-tags:before { content: '\e81f'; } /* '' */
+.icon-phone:before { content: '\e822'; } /* '' */
+.icon-key:before { content: '\e823'; } /* '' */
+.icon-info-circled:before { content: '\e824'; } /* '' */
+.icon-help-circled:before { content: '\e825'; } /* '' */
+.icon-home:before { content: '\e826'; } /* '' */
+.icon-doc:before { content: '\e827'; } /* '' */
+.icon-plus:before { content: '\e828'; } /* '' */
+.icon-clock:before { content: '\e82a'; } /* '' */
+.icon-rss:before { content: '\f09e'; } /* '' */
+.icon-list-bullet:before { content: '\f0ca'; } /* '' */
+.icon-table:before { content: '\f0ce'; } /* '' */
+.icon-sort:before { content: '\f0dc'; } /* '' */
+.icon-sort-down:before { content: '\f0dd'; } /* '' */
+.icon-sort-up:before { content: '\f0de'; } /* '' */
+.icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-comment-empty:before { content: '\f0e5'; } /* '' */
+.icon-chat-empty:before { content: '\f0e6'; } /* '' */
+.icon-doc-text:before { content: '\f0f6'; } /* '' */
+.icon-quote-left:before { content: '\f10d'; } /* '' */
+.icon-quote-right:before { content: '\f10e'; } /* '' */
+.icon-unlink:before { content: '\f127'; } /* '' */
+.icon-calendar-empty:before { content: '\f133'; } /* '' */
+.icon-lock-open-alt:before { content: '\f13e'; } /* '' */
+.icon-rss-squared:before { content: '\f143'; } /* '' */
+.icon-dollar:before { content: '\f155'; } /* '' */
+.icon-doc-inv:before { content: '\f15b'; } /* '' */
+.icon-doc-text-inv:before { content: '\f15c'; } /* '' */
+.icon-file-pdf:before { content: '\f1c1'; } /* '' */
+.icon-file-word:before { content: '\f1c2'; } /* '' */
+.icon-file-excel:before { content: '\f1c3'; } /* '' */
+.icon-trash:before { content: '\f1f8'; } /* '' */
+.icon-user-plus:before { content: '\f234'; } /* '' */
+.icon-user-times:before { content: '\f235'; } /* '' */
+.icon-balance-scale:before { content: '\f24e'; } /* '' */
+.icon-calendar-plus-o:before { content: '\f271'; } /* '' */
+.icon-calendar-minus-o:before { content: '\f272'; } /* '' */
+.icon-calendar-times-o:before { content: '\f273'; } /* '' */
+.icon-calendar-check-o:before { content: '\f274'; } /* '' */
+.icon-address-book:before { content: '\f2b9'; } /* '' */
+.icon-address-book-o:before { content: '\f2ba'; } /* '' */
+.icon-address-card:before { content: '\f2bb'; } /* '' */
+.icon-address-card-o:before { content: '\f2bc'; } /* '' */
+.icon-user-o:before { content: '\f2c0'; } /* '' */
+.icon-id-card:before { content: '\f2c2'; } /* '' */
+.icon-id-card-o:before { content: '\f2c3'; } /* '' */
