--- a/app/MemberModule/templates/Akce.default.latte
+++ b/app/MemberModule/templates/Akce.default.latte
@@ -58,7 +58,7 @@ $akce->date_add > $user->getIdentity()->date_last ? 'new',
 {if ($akce->login_mem or $akce->login_org)} <span class="no-wrap" title="Na akci se lze přihlásit"><span class="char green icon-ok-circled"></span>{else}<span class="no-wrap" title="Na akci se lze přihlásit"><span class="char red icon-cancel-circled"></span>{/if}přihlášení</span>
 
 {if $old}
-	{if $akce->report} <span class="no-wrap" title="Akce má vyplněný záznam"><span class="char green icon-ok-circled"></span>{else}<span class="no-wrap" title="Akce nemá vyplněný záznam"><span class="char red icon-cancel-circled"></span>{/if}záznam</span>
+	{if ($akce->report)or($akce->message)} <span class="no-wrap" title="Akce má vyplněný záznam"><span class="char green icon-ok-circled"></span>{else}<span class="no-wrap" title="Akce nemá vyplněný záznam"><span class="char red icon-cancel-circled"></span>{/if}záznam</span>
 	{if $akce->bill} <span class="no-wrap" title="Akce má vyplněné vyúčtování"><span class="char green icon-ok-circled"></span>{else}<span class="no-wrap" title="Akce nemá vyplněné vyučtování"><span class="char red icon-cancel-circled"></span>{/if}vyúčtování</span>
 {/if}
 
