--- a/app/MemberModule/templates/Hlasovani.view.latte
+++ b/app/MemberModule/templates/Hlasovani.view.latte
@@ -28,7 +28,7 @@ h2 {margin-top: 1ex;}
 	<li><a n:href="delete,$anketa->id" class="buttonLike confirm" data-query="Opravdu chcete tuto anketu smazat?">
 		<span class="icon-trash"></span> smazat</a></li>
 	<li n:if="$anketa->date_deatline > date_create()">
-	{if $locked}<a n:href="lock,$anketa->id,0" class="buttonLike"><span class="icon-lock-open"></span> odemknout</a>
+	{if $locked}<a n:href="lock,$anketa->id,0" class="buttonLike"><span class="icon-lock-open-alt"></span> odemknout</a>
 	{else}<a n:href="lock,$anketa->id,1" class="buttonLike"><span class="icon-lock"></span> zamknout</a>
 	{/if}
 	</li>
