--- a/app/components/PostsListControl.latte
+++ b/app/components/PostsListControl.latte
@@ -23,7 +23,7 @@
             {if $post->id == $topic->id and ($user->id == $post->member_id or $user->isInRole('Member:Forum'))}
                 {if $topic->locked}
                     <a class="buttonLike" href="{plink Forum:lockTopic,$post->id,0}">
-                        <span class="icon-lock-open"></span> odemknout
+                        <span class="icon-lock-open-alt"></span> odemknout
                     </a>
                 {else}
                     <a class="buttonLike" href="{plink Forum:lockTopic,$post->id,1}">
