--- a/app/components/RatingControl.latte
+++ b/app/components/RatingControl.latte
@@ -3,6 +3,10 @@
         document.getElementById('rating-preview-'+id).classList.add('hide');
         document.getElementById('rating-message-'+id).classList.remove('hide');
     }
+    function editRating() {
+        document.getElementById('rating-edit-sign').classList.add('hide');
+        document.getElementById('rating-edit-area').classList.remove('hide');
+    }
 </script>
 
 {if isset($ratings)}
@@ -23,10 +27,12 @@
                 <br>
                 {if $rating->message}
                     <span id="rating-preview-{$memberId}" class="preview">{$rating->message|nl2br|noescape|truncate:$limit}
-                        <a n:if="mb_strlen($rating->message) > $limit" href="javascript:more({$memberId})">Další</a></span>
+                        <a n:if="mb_strlen($rating->message) > $limit" href="javascript:more({$memberId})">Více</a></span>
                     <span n:if="mb_strlen($rating->message) > $limit" id="rating-message-{$memberId}" class="hide message">{$rating->message|nl2br|noescape}</span>
                 {/if}
-
+                {if $memberId === $user->getId()}
+                    <a id="rating-edit-sign" href="javascript:editRating()">Editovat</a>
+                {/if}
             </p>
         {/foreach}
     </div>
@@ -34,15 +40,18 @@
 
 <div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
 
-<h3>Moje hodnocení <span class="icon icon-star-empty"></span></h3>
-{form ratingForm}
-    <ul class="error" n:if="$form->hasErrors()">
-        <li n:foreach="$form->errors as $error">{$error}</li>
-    </ul>
+<div id="rating-edit-area" class="hide">
+    <h3>Editace hodnocení <span class="icon icon-star-empty"></span></h3>
+    {form ratingForm}
+        <ul class="error" n:if="$form->hasErrors()">
+            <li n:foreach="$form->errors as $error">{$error}</li>
+        </ul>
 
-    <div class="float_right">{input ok}</div>
-    <p><span id="stars">{label rating /} {input rating}</span> <span class="no-wrap">{label public /}{input public} {label anonymous /}{input anonymous}</span></p>
-    <p>{input message}</p>
+        <div class="float_right">{input ok}</div>
+        <p><span id="stars">{label rating /} {input rating}</span> <span
+                    class="no-wrap">{label public /}{input public} {label anonymous /}{input anonymous}</span></p>
+        <p>{input message}</p>
 
 
-{/form}
+    {/form}
+</div>
