Rating textarea visual adjust

--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -30,7 +30,8 @@
     .prev-next { margin-bottom: 1em;}
     hr { border: none; border-top: 1px solid #ccc; }
 
-    #frm-rating-ratingForm-message { width: 100%; min-height: auto;}
+    #frm-rating-ratingForm-message { width: 100%; min-height: auto; background: none; font-family: sans-serif;
+    font-size: 90%; border-color: #ccc; }
     #ratings { font-size: 90%; }
     .stars { color: #885500; font-size: larger; }
 </style>
