Remove MS from our company name

--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -2,7 +2,7 @@
 {var $mail->subject = '[VZS_info] Obnova hesla'}
 Zdravím
 
-Ze stránek VZS MS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
+Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
 
 Nové si můžete nastavit na adrese: {link //Sign:restorePassword pubkey => $pubkey}
 
