--- a/app/components/RatingControl.latte
+++ b/app/components/RatingControl.latte
@@ -21,7 +21,7 @@
                 </strong>
                 {if $rating->message}
                     <span id="rating-preview-{$memberId}" class="preview">{$rating->message|nl2br|noescape|truncate:$limit}
-                        <a n:if="mb_strlen($rating->message) > $limit" href="javascript:more({$memberId})">Další</a></span>
+                        <a n:if="mb_strlen($rating->message) > $limit" href="javascript:more({$memberId})">Více</a></span>
                     <span n:if="mb_strlen($rating->message) > $limit" id="rating-message-{$memberId}" class="hide message">{$rating->message|nl2br|noescape}</span>
                 {/if}
                 <span n:if="$rating->rating" class="stars">{$rating->rating|stars}</span>
