Remove "member" from mail subscription

--- a/app/MemberModule/templates/Mail/forgotPassword.latte
+++ b/app/MemberModule/templates/Mail/forgotPassword.latte
@@ -16,4 +16,4 @@ Vstup na stránky pro členy: {link //Akce:default}
 
 -----------------------------------------------------------------------
 Tato zpráva byla generována automaticky a není potřeba na ní odpovídat. 
-VZS Jablonec Member
+VZS Jablonec
