--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -10,4 +10,4 @@ Tento odkaz bude fungovat do {$date_end|date:'d.m.Y H:i:s'}
 
 -----------------------------------------------------------------------
 Tato zpráva byla generována automaticky a není potřeba na ní odpovídat. 
-VZS Jablonec Member
+VZS Jablonec
