Remove old unused function

--- a/app/MemberModule/templates/News.default.latte
+++ b/app/MemberModule/templates/News.default.latte
@@ -1,15 +1,10 @@
 {block #head}
 <style type="text/css" n:syntax="off">
-.news { margin-top: 0px; list-style-type: disc; }
+.news { margin-top: 0; list-style-type: disc; }
 h3 { margin-bottom: 1ex; }
 .logged { color: #C22; }
 </style>
 
-{* <script type="text/javascript" n:if="$user->id == 75">
-alert('Vítej Týňulinko!');
-</script>
- *}
- 
 {/block}
 
 <h1 n:block="title">Novinky</h1>
